--- a/index.html
+++ b/index.html
@@ -19,37 +19,37 @@
                 </ul>
             </nav>
             <div class="hero-content">
-                <h1>Curso Web Fundamentos</h1>
-                <p>Aprende HTML, CSS e Javascript</p>
+                <h1>Lorem ipsum dolor sit amet</h1>
+                <p class="p-h1">Aprendendo HTML, CSS e Javascript</p>
             </div>
         </header>
            <main>
+                    
                 <section class="sec-content">
-                    <div class="card">
+                    <div class="card-1">
                         <img src="imagens/card_01.png" alt="">
                         <p>Seletores</p>
                     </div>
-                    <div class="card">
+                    <div class="card-2">
                         <img src="imagens/card_02.jpg" alt="">
                         <p>Posicionamentos</p>
                     </div>
-                    <div class="card">
+                    <div class="card-3">
                         <img src="imagens/card_03.jpg" alt="">
                         <p>Fontes e icones</p>
                     </div>
                 </section>
-               <section class="sec-content">
-                 <article>
+               <section class="tree-content">
+                 <article class="title-2">
                         <header>
-                            <h2>Titulo do article</h2>
-                     </header>
-                     <p>Paragrafo 1</p>
-                     <p>Paragrafo 2</p>
+                            <center><h2>Titulo do article</h2><center>
+                        </header>
+                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis unde qui praesentium quia inventore nemo perferendis nam blanditiis incidunt! Totam eos placeat explicabo? Non nobis porro suscipit deleniti optio iuLorem ipsum dolor sit amet consectetur adipisicing elit. Quae et officia incidunt accusantium nobis doloribus autem, iste mollitia fugit nihil, repellat sit ducimus perferendis culpa debitis expedita id officiis soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quam nesciunt pariatur non voluptates expedita deserunt impedit est dignissimos! Vitae nemo nisi similique est, cumque fugit dolorum nulla quas quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium a impedit tenetur non natus ipsa at eaque delectus inventore, possimus molestias iste doloribus modi id, rerum quasi illum dolorum animi!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti labore molestiae praesentium voluptatibus porro debitis, optio temporibus voluptatum reprehenderit atque vero! Veritatis, repellat cum numquam quod magnam aliquam illum nulla?</p>
                    </article>
                </section>
            </main>
            <footer>
-                <p>Copyright &copy; 2020</p>
+                <center><p class="coy">Copyright &copy; 2020</p>
            </footer>
        </div>
     </body>
