finish i think xp

--- a/index.html
+++ b/index.html
@@ -23,30 +23,46 @@
                 <p class="p-h1">Aprendendo HTML, CSS e Javascript</p>
             </div>
         </header>
-           <main>
-                    
+        
+           <main>      
                 <section class="sec-content">
                     <div class="card-1">
                         <img src="imagens/card_01.png" alt="">
-                        <p>Seletores</p>
+                        <p class="pc1"><a href="#">Seletores</a></p>
                     </div>
                     <div class="card-2">
                         <img src="imagens/card_02.jpg" alt="">
-                        <p>Posicionamentos</p>
+                        <p class="pc2"><a href="#">Posicionamentos</a></p>
                     </div>
                     <div class="card-3">
                         <img src="imagens/card_03.jpg" alt="">
-                        <p>Fontes e icones</p>
-                    </div>
+                        <p class="pc3"><a href="#">Fontes e icones</a></p>
+                    </div> 
                 </section>
                <section class="tree-content">
                  <article class="title-2">
                         <header>
-                            <center><h2>Titulo do article</h2><center>
+                            <center><h2>Titulo 01</h2><center>
                         </header>
-                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis unde qui praesentium quia inventore nemo perferendis nam blanditiis incidunt! Totam eos placeat explicabo? Non nobis porro suscipit deleniti optio iuLorem ipsum dolor sit amet consectetur adipisicing elit. Quae et officia incidunt accusantium nobis doloribus autem, iste mollitia fugit nihil, repellat sit ducimus perferendis culpa debitis expedita id officiis soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quam nesciunt pariatur non voluptates expedita deserunt impedit est dignissimos! Vitae nemo nisi similique est, cumque fugit dolorum nulla quas quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium a impedit tenetur non natus ipsa at eaque delectus inventore, possimus molestias iste doloribus modi id, rerum quasi illum dolorum animi!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti labore molestiae praesentium voluptatibus porro debitis, optio temporibus voluptatum reprehenderit atque vero! Veritatis, repellat cum numquam quod magnam aliquam illum nulla?</p>
+                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis unde qui praesentium quia inventore nemo perferendis nam blanditiis incidunt! Totam eos placeat explicabo? Non nobis porro suscipit deleniti optio iuLorem ipsum dolor sit amet consectetur<hr><span class="txt">adipisicing elit. Quae et officia incidunt accusantium nobis doloribus autem</span>, iste mollitia fugit nihil, repellat sit ducimus perferendis culpa </p>
                    </article>
                </section>
+               <section class="surf">
+                <article class="title-2">
+                       <header>
+                           <center><h2>Titulo 02</h2><center>
+                       </header>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis unde qui praesentium quia inventore nemo perferendis nam blanditiis incidunt! Totam eos placeat explicabo? Non nobis porro suscipit deleniti optio iuLorem ipsum dolor sit amet consectetur<hr><span class="txt">adipisicing elit. Quae et officia incidunt accusantium nobis doloribus autem</span>, iste mollitia fugit nihil, repellat sit ducimus perferendis culpa </p>
+                  </article>
+              </section>
+              <section class="surf01">
+                <article class="title-2">
+                       <header>
+                           <center><h2 class="t3">Titulo 03</h2><center>
+                       </header>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis unde qui praesentium quia inventore nemo perferendis nam blanditiis incidunt! Totam eos placeat explicabo? Non nobis porro suscipit deleniti optio iuLorem ipsum dolor sit amet consectetur<hr><span class="txt">adipisicing elit. Quae et officia incidunt accusantium nobis doloribus autem</span>, iste mollitia fugit nihil, repellat sit ducimus perferendis culpa </p>
+                  </article>
+              </section>
            </main>
            <footer>
                 <center><p class="coy">Copyright &copy; 2020</p>
